--- a/src/app/pages/encuesta/encuesta.component.html
+++ b/src/app/pages/encuesta/encuesta.component.html
@@ -1,6 +1,7 @@
+<router-outlet></router-outlet>
 <mat-toolbar>Encuesta Lenguaje de programacion</mat-toolbar>
 
-<button mat-fab color="primary" style="float: right" (click)="openDialog()">
+<button mat-fab color="primary" style="float: right" [routerLink]="['crear']">
   <mat-icon>create</mat-icon>
 </button>
 
@@ -42,12 +43,18 @@
       <td mat-cell *matCellDef="let row"> {{row.fecha | date: 'dd/MM/yyyy'}} </td>
     </ng-container> -->
 
-    <ng-container matColumnDef="acciones">
+    <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let row">
         <span>
-          <button mat-icon-button (click)="eliminarFeedBack(row.id)">
+          <button mat-icon-button (click)="eliminarEncuesta(row.id)">
             <mat-icon>delete</mat-icon>
+          </button>
+        </span>
+
+        <span>
+          <button mat-icon-button [routerLink]="['editar', row.id]">
+            <mat-icon>edit</mat-icon>
           </button>
         </span>
       </td>
