--- a/src/app/pages/encuesta/encuesta.component.html
+++ b/src/app/pages/encuesta/encuesta.component.html
@@ -1,4 +1,5 @@
 <router-outlet></router-outlet>
+<div *ngIf="route.children.length === 0">
 <mat-toolbar>Encuesta Lenguaje de programacion</mat-toolbar>
 
 <button mat-fab color="primary" style="float: right" [routerLink]="['crear']">
@@ -68,4 +69,5 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="totalElementos" (page)="mostrarMas($event)">
   </mat-paginator>
+</div>
 </div>
